--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiTests.beforeSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:23</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiTests.Test01()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">Test01</td> 
-  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:42</td>   <td>19179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiTests.afterSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:42</td>   <td>19179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiTests.beforeSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:42</td>   <td>19179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiTests.Test02()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">Test02</td> 
-  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:57</td>   <td>33860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiTests.afterSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:57</td>   <td>33860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiTests.beforeSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:57:57</td>   <td>33861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiTests.Test03()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">Test03</td> 
-  <td>main@1663411182</td>   <td></td> </tr>
-<tr bgcolor="beef9d">  <td>19/09/02 09:58:13</td>   <td>50049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiTests.afterSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@5649fd9b]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td>  <td>main@1663411182</td>   <td></td> </tr>
+<tr bgcolor="7471b5">  <td>19/09/02 14:00:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultiTests.beforeSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@42d80b78]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td>  <td>main@327177752</td>   <td></td> </tr>
+<tr bgcolor="7471b5">  <td>19/09/02 14:00:46</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultiTests.Test01()[pri:0, instance:com.training.multi.browser.testing.MultiTests@42d80b78]">Test01</td> 
+  <td>main@327177752</td>   <td></td> </tr>
+<tr bgcolor="7471b5">  <td>19/09/02 14:01:21</td>   <td>34654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultiTests.afterSuite()[pri:0, instance:com.training.multi.browser.testing.MultiTests@42d80b78]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td>  <td>main@327177752</td>   <td></td> </tr>
 </table>
